# deribit-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci.yml
examples/: authentication.rs  buysell.rs  debug_deserialize.rs  deser.rs  heartbeat.rs  latency.rs  subscribe_orderbook.rs  subscribe_ticker.rs  subscription.rs  test.rs  test1.rs
src/: api_client.rs  errors.rs  lib.rs  macros.rs  models.rs  subscription_client.rs
src/api_client/: account.rs  authentication.rs  public.rs  session_management.rs  subscription.rs  support.rs  trading.rs
src/api_client/public/: get_time.rs  hello.rs
src/models/: account.rs  authentication.rs  internal.rs  jsonrpc.rs  market_data.rs  message.rs  mod.rs  public.rs  session_management.rs  subscription.rs  support.rs  trading.rs  wallet.rs
src/models/public/: get_time.rs  hello.rs  subscribe.rs
src/models/subscription/: channel.rs  channels.rs  mod.rs
src/models/subscription/channel/: book.rs  book.{instrument_name}.{interval}.rs  ticker.rs  ticker.{instrument_name}.interval.rs  user.portfolio.{currency}.rs  user.trades.{instrument_name}.{interval}.rs  user_orders.rs  user_portfolio.rs  user_trades.rs
src/models/subscription/channels/: announcements.rs  book.rs  deribit_price_index.rs  deribit_price_ranking.rs  estimated_expiration_price.rs  instrument.rs  markprice.rs  mod.rs  perpetual.rs  quote.rs  ticker.rs  trades.rs  user_changes.rs  user_orders.rs  user_portfolio.rs  user_trades.rs
tests/: account.rs  get_time.rs  hello.rs  market_data.rs  subscription.rs  support.rs  timeout.rs  timtout.rs  trading.rs  wallet.rs
