[package]
name = "deribit"
version = "0.3.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]
edition = "2018"
description = "Rust client for deribit. Please look at tests/examples for detail usage at current stage."
license = "MIT"
documentation = "https://docs.rs/deribit"
repository = "https://github.com/dovahcrow/deribit-rs"
readme = "README.md"
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "dovahcrow/deribit-rs", branch = "master" }

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio = { version = "1", features = ["time", "macros", "rt", "net"] }
tungstenite = "0.12"
tokio-tungstenite = { features = ["tls"], version = "0.13" }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
derive_builder = "0.9"
pin-project = "1"
shrinkwraprs = "0.3"
regex = "1"
lazy_static = "1"

fehler = "1"
thiserror = "1"
failure = "0.1"
# anyhow = "1"

[dev-dependencies]
env_logger = "0.8"
dotenv = "0.15"

[dev-dependencies.tokio]
version = "1"
features = ["time", "macros", "rt-multi-thread", "net"]
