[package]
authors = ["Weiyuan Wu <youngw@sfu.ca>"]
categories = ["api-bindings"]
description = "Rust client for deribit. Please look at tests/examples for detail usage at current stage."
documentation = "https://docs.rs/deribit"
edition = "2018"
license = "MIT"
name = "deribit"
readme = "README.md"
repository = "https://github.com/dovahcrow/deribit-rs"
version = "0.3.2"

[badges]
travis-ci = {repository = "dovahcrow/deribit-rs", branch = "master"}

[dependencies]
chrono = "0.4"
derive_builder = "0.10"
failure = "0.1"
fehler = "1"
futures = {version = "0.3", features = ["async-await"]}
lazy_static = "1"
log = "0.4"
pin-project = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
shrinkwraprs = "0.3"
thiserror = "1"
tokio = {version = "1", features = ["time", "macros", "rt", "net"]}
tokio-tungstenite = {features = ["rustls-tls"], version = "0.14"}
tungstenite = {version = "0.13", features = ["rustls-tls"], default-features = false}
url = "2"
# anyhow = "1"

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.8"

[dev-dependencies.tokio]
features = ["time", "macros", "rt-multi-thread", "net"]
version = "1"
