[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
categories = ["api-bindings"]
description = "Rust client for deribit. Please look at tests/examples for detailed usages."
documentation = "https://docs.rs/deribit"
edition = "2018"
license = "MIT"
name = "deribit"
readme = "README.md"
repository = "https://github.com/dovahcrow/deribit-rs"
version = "0.3.3"

[badges]
travis-ci = {repository = "dovahcrow/deribit-rs", branch = "master"}

[dependencies]
anyhow = "1"
chrono = "0.4"
derive_builder = "0.12"
fehler = "1"
futures = {version = "0.3", features = ["async-await"]}
lazy_static = "1"
log = "0.4"
paste = "1"
pin-project = "1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
shrinkwraprs = "0.3"
thiserror = "1"
tokio = {version = "1", features = ["time", "macros", "rt", "net"]}
tokio-tungstenite = {features = ["rustls-tls-native-roots"], version = "0.18"}
tungstenite = {version = "0.18", features = ["rustls-tls-native-roots"], default-features = false}
url = "2"

[dev-dependencies]
env_logger = "0.10"

[dev-dependencies.tokio]
features = ["time", "macros", "rt-multi-thread", "net"]
version = "1"
